--- a/vignettes/Rcpp-FAQ.Rmd
+++ b/vignettes/Rcpp-FAQ.Rmd
@@ -52,7 +52,7 @@ fontsize: 9pt
 #one_sided: true
 
 # Optional: Enable section numbering, default is unnumbered
-#numbersections: true
+numbersections: true
 
 # Optional: Specify the depth of section number, default is 5
 #secnumdepth: 5
