--- a/vignettes/Rcpp-sugar.Rmd
+++ b/vignettes/Rcpp-sugar.Rmd
@@ -57,8 +57,14 @@ fontsize: 9pt
 # Optional: Enable one-sided layout, default is two-sided
 #one_sided: true
 
+# Optional: Enable section numbering, default is unnumbered
+numbersections: true
+
+# Optional: Specify the depth of section number, default is 5
+#secnumdepth: 5
+
 # Optional: Bibliography
-bibliography: '`r Rcpp:::bib()`.bib'
+bibliography: Rcpp
 
 # Optional: Enable a 'Draft' watermark on the document
 #watermark: false
