--- a/vignettes/Rcpp-sugar.Rmd
+++ b/vignettes/Rcpp-sugar.Rmd
@@ -1,13 +1,12 @@
 ---
-title: |
-       | \pkg{Rcpp} syntactic sugar
+title: \pkg{Rcpp} syntactic sugar
 
 # Use letters for affiliations
 author:
   - name: Dirk Eddelbuettel
     affiliation: a
-  - name: Romain Francois
-    affiliation: a
+  - name: Romain François
+    affiliation: b
 
 address:
   - code: a
@@ -16,24 +15,22 @@ address:
     address: \url{https://romain.rbind.io/}
 
 # For footer text
-lead_author_surname: Eddelbuettel and Francois
+lead_author_surname: Eddelbuettel and François
 
 # Place DOI URL or CRAN Package URL here
 doi: "https://cran.r-project.org/package=Rcpp"
 
 # Abstract
 abstract: |
-  This note describes \sugar which has been introduced in
-  version 0.8.3 of \pkg{Rcpp} \citep{CRAN:Rcpp,JSS:Rcpp}. \sugar 
-  brings a higher-level of abstraction to \proglang{C++} code
-  written using the \pkg{Rcpp} API.
-
-  \sugar is based on expression templates
-  \citep{Abrahams+Gurtovoy:2004:TemplateMetaprogramming,Vandevoorde+Josuttis:2003:Templates} and provides
-  some 'syntactic sugar' facilities directly in \pkg{Rcpp}. This is similar
-  to how \pkg{RcppArmadillo} \citep{CRAN:RcppArmadillo} offers
-  linear algebra \proglang{C++} classes based on \pkg{Armadillo}
-  \citep{Sanderson:2010:Armadillo}.
+  This note describes \sugar which has been introduced in version
+  0.8.3 of \pkg{Rcpp} \citep{CRAN:Rcpp,JSS:Rcpp}. \sugar brings a
+  higher-level of abstraction to \proglang{C++} code written using the
+  \pkg{Rcpp} API.  \sugar is based on expression templates
+  \citep{Abrahams+Gurtovoy:2004:TemplateMetaprogramming,Vandevoorde+Josuttis:2003:Templates}
+  and provides some 'syntactic sugar' facilities directly in
+  \pkg{Rcpp}. This is similar to how \pkg{RcppArmadillo}
+  \citep{CRAN:RcppArmadillo} offers linear algebra \proglang{C++}
+  classes based on \pkg{Armadillo} \citep{Sanderson:2010:Armadillo}.
 
 # Optional: Acknowledgements
 # acknowledgements: |
@@ -42,8 +39,8 @@ abstract: |
 keywords:
   - Rcpp
   - sugar
-  - r
-  - cpp
+  - R
+  - C++
 
 # Font size of the document, values of 9pt (default), 10pt, 11pt and 12pt
 fontsize: 9pt
@@ -72,7 +69,7 @@ bibliography: Rcpp
 # Customize footer, eg by referencing the vignette
 footer_contents: "Rcpp Vignette"
 
-# Our style
+# Produce a pinp document
 output: pinp::pinp
 
 header-includes:
@@ -85,7 +82,7 @@ header-includes:
 
 vignette: >
   %\VignetteIndexEntry{Rcpp-sugar}
-  %\VignetteKeywords{Rcpp, sugar, r, cpp}
+  %\VignetteKeywords{Rcpp, sugar, R, Cpp}
   %\VignettePackage{Rcpp}
   %\VignetteEngine{knitr::rmarkdown}
 ---
@@ -101,8 +98,8 @@ without loosing performance. Consider the following code example which
 provides a function `foo` as a \proglang{C++} extension to
 \proglang{R} by using the \pkg{Rcpp} API:
 
-```{Rcpp, eval = FALSE}
-RcppExport SEXP foo( SEXP x, SEXP y) {
+```cpp
+RcppExport SEXP foo(SEXP x, SEXP y) {
     Rcpp::NumericVector xx(x), yy(y);
     int n = xx.size();
     Rcpp::NumericVector res(n);
@@ -126,7 +123,7 @@ The goal of the function `foo` code is simple. Given two
 \proglang{R} thanks to vectorisation as shown in the next example.
 
 ```{r, eval = FALSE}
-foo <- function(x, y){
+foo <- function(x, y) {
     ifelse(x < y, x * x, -(y * y))
 }
 ```
@@ -135,21 +132,16 @@ Put succinctly, the motivation of \sugar is to bring a subset of the
 high-level \proglang{R} syntax in \proglang{C++}. Hence, with \sugar, the
 \proglang{C++} version of `foo` now becomes:
 
-```{Rcpp, eval = FALSE}
-RcppExport SEXP foo( SEXP xs, SEXP ys) {
-    Rcpp::NumericVector x(xs);
-    Rcpp::NumericVector y(ys);
-    return Rcpp::wrap(
-        ifelse(x < y, x * x, -(y * y))
-    );
+```cpp
+Rcpp::NumericVector foo(Rcpp::NumericVector x, 
+                        Rcpp::NumericVector y) {
+    return ifelse(x < y, x * x, -(y * y));
 }
 ```
 
-Apart from the fact that we need to assign the two objects we obtain from
-\proglang{R}---which is a simple statement each thanks to the template magic
-in \pkg{Rcpp}---and the need for explicit `return` and
-`Rcpp::wrap` statements, the code is now identical between
-highly-vectorised \proglang{R} and \proglang{C++}.
+Apart from being stronly-typed and the need for explicit `return`
+statement, the code is now identical between highly-vectorised
+\proglang{R} and \proglang{C++}.
 
 \sugar is written using expression templates and lazy evaluation techniques
 \citep{Abrahams+Gurtovoy:2004:TemplateMetaprogramming,Vandevoorde+Josuttis:2003:Templates}.
@@ -166,7 +158,7 @@ sections discuss several examples.
 \sugar defines the usual binary arithmetic operators : `+`, `-`,
 `*`, `/`.
 
-```{Rcpp, eval = FALSE}
+```cpp
 // two numeric vectors of the same size
 NumericVector x;
 NumericVector y;
@@ -203,7 +195,7 @@ Binary logical operators create a `logical` sugar expression
 from either two sugar expressions of the same type or one sugar expression
 and a primitive value of the associated type.
 
-```{Rcpp, eval = FALSE}
+```cpp
 // two integer vectors of the same size
 NumericVector x;
 NumericVector y;
@@ -233,7 +225,7 @@ LogicalVector res = (x + y) == (x*x);
 The unary `operator-` can be used to negate a (numeric) sugar expression.
 whereas the unary `operator!` negates a logical sugar expression:
 
-```{Rcpp, eval = FALSE}
+```cpp
 // a numeric vector
 NumericVector x;
 
@@ -264,7 +256,7 @@ identifies if any the element is `TRUE` when
 given a logical sugar expression.
 
 
-```{Rcpp, eval = FALSE}
+```cpp
 IntegerVector x = seq_len(1000);
 all(x*x < 3);
 any(x*x < 3);
@@ -281,7 +273,7 @@ only the two first indices of the expression \verb|x * x < 3|. `any`
 is lazy too, so it will only need to resolve the first element of the example
 above.
 
-%### Conversion to bool
+### Conversion to bool
 
 One important thing to note concerns the conversion to the `bool`
 type. In order to respect the concept of missing values (`NA`) in
@@ -289,7 +281,7 @@ type. In order to respect the concept of missing values (`NA`) in
 be converted to `bool`. Instead one must use `is_true`,
 `is_false` or `is_na`:
 
-```{Rcpp, eval = FALSE}
+```cpp
 // wrong: will generate a compile error
 bool res = any(x < y);
 
@@ -299,7 +291,7 @@ bool res = is_false(any( x < y ));
 bool res = is_na(any( x < y ));
 ```
 
-% FIXME this may need some expanding the trivariate bool and how to use it
+<!-- % FIXME this may need some expanding the trivariate bool and how to use it-->
 
 
 ## Functions producing sugar expressions
@@ -311,7 +303,7 @@ functions in this section) produces a logical sugar expression of the same
 length. Each element of the result expression evaluates to `TRUE` if
 the corresponding input is a missing value, or `FALSE` otherwise.
 
-```{Rcpp, eval = FALSE}
+```cpp
 IntegerVector x = 
     IntegerVector::create(0, 1, NA_INTEGER, 3);
 
@@ -325,7 +317,7 @@ any(!is_na( x ))
 Given a sugar expression of any type, `seq_along` creates an
 integer sugar expression whose values go from 1 to the size of the input.
 
-```{Rcpp, eval = FALSE}
+```cpp
 IntegerVector x = 
     IntegerVector::create( 0, 1, NA_INTEGER, 3 );
 
@@ -341,11 +333,11 @@ second expression, since the abstract syntax tree is built at compile time.
 
 ### seq_len
 
-`seq_len` creates an integer sugar expression whose \ith\
-element expands to `i`. `seq_len` is particularly useful in
+`seq_len` creates an integer sugar expression whose 
+\ith\ element expands to `i`. `seq_len` is particularly useful in
 conjunction with `sapply` and `lapply`.
 
-```{Rcpp, eval = FALSE}
+```cpp
 // 1, 2, ..., 10
 IntegerVector x = seq_len(10);
 
@@ -360,8 +352,8 @@ generates a sugar expression of the same type whose \ith\ element expands to
 the lowest (highest) value between the \ith\ element of the first expression
 and the \ith element of the second expression.
 
-```{Rcpp, eval = FALSE}
-IntegerVector x = seq_len( 10 );
+```cpp
+IntegerVector x = seq_len(10);
 
 pmin(x, x*x);
 pmin(x*x, 2);
@@ -384,7 +376,7 @@ or the \ith\ of the second expression if
 the \ith\ element of the condition expands to `FALSE`,
 or the appropriate missing value otherwise.
 
-```{Rcpp, eval = FALSE}
+```cpp
 IntegerVector x;
 IntegerVector y;
 
@@ -402,7 +394,7 @@ the function.
 The function can be a free \proglang{C++} function such as the overload
 generated by the template function below:
 
-```{Rcpp, eval = FALSE}
+```cpp
 template <typename T>
 T square(const T& x){
     return x * x;
@@ -413,7 +405,7 @@ sapply(seq_len(10), square<int>);
 Alternatively, the function can be a functor whose type has a nested type
 called `result_type`
 
-```{Rcpp, eval = FALSE}
+```cpp
 template <typename T>
 struct square : std::unary_function<T, T> {
     T operator()(const T& x){
@@ -434,11 +426,11 @@ Given a numeric or integer expression, `sign` expands to an expression
 whose values are one of 1, 0, -1 or `NA`, depending on the sign
 of the input expression.
 
-```{Rcpp, eval = FALSE}
+```cpp
 IntegerVector xx;
 
-sign( xx )
-sign( xx * xx )
+sign(xx)
+sign(xx * xx)
 ```
 
 ### diff
@@ -448,10 +440,10 @@ the difference between the $(i+1)^{\text{th}}$ and the
 \ith\ element of the input expression. Supported types are
 integer and numeric.
 
-```{Rcpp, eval = FALSE}
+```cpp
 IntegerVector xx;
 
-diff( xx )
+diff(xx)
 ```
 
 ## Mathematical functions
@@ -461,7 +453,7 @@ the result of the given function (say, `abs`) is the result of
 applying that function to this \ith\ element of the input expression.
 Supported types are integer and numeric.
 
-```{Rcpp, eval = FALSE}
+```cpp
 IntegerVector x;
 
 abs(x)
@@ -471,7 +463,7 @@ ceil(x)
 pow(x, z)     // x to the power of z
 ```
 
-% log() and log10() maybe?  Or ln() ?
+<!-- % log() and log10() maybe?  Or ln() ?-->
 
 ## The d/q/p/r statistical functions
 
@@ -483,7 +475,7 @@ Currently, most of these functions are vectorised for the first element which
 denote size. Consequently, these calls works in \proglang{C++} just as they
 would in \proglang{R}:
 
-```{Rcpp, eval = FALSE}
+```cpp
 x1 = dnorm(y1, 0, 1); // density of y1 at m=0, sd=1
 x2 = qnorm(y2, 0, 1); // quantiles of y2
 x3 = pnorm(y3, 0, 1); // distribution of y3
@@ -508,7 +500,7 @@ initialize the state of the random number generator as detailed in Section
 the random number generatator on entry to a block and resets it on exit. We
 offer the \code{RNGScope} class which allows code such as
 
-```{Rcpp, eval = FALSE}
+```cpp
 RcppExport SEXP getRGamma() {
     RNGScope scope;
     NumericVector x = rgamma(10, 1, 1);
@@ -545,7 +537,7 @@ Expression templates such as those used by \sugar use a technique
 called the _Curiously Recurring Template Pattern_ (CRTP). The general
 form of CRTP is:
 
-```{Rcpp, eval = FALSE}
+```cpp
 // The Curiously Recurring Template Pattern (CRTP)
 template <typename T>
 struct base {
@@ -568,7 +560,7 @@ class template. All sugar expression derive from one class generated by the
 `VectorBase` template. The current definition of `VectorBase`
 is given here:
 
-```{Rcpp, eval = FALSE}
+```cpp
 template <int RTYPE, bool na, typename VECTOR>
 class VectorBase {
 public:
@@ -586,17 +578,13 @@ public:
     }
 
     inline stored_type operator[](int i) const {
-        return 
-          static_cast<const VECTOR*>(
-                  this
-          )->operator[](i);
+        return static_cast<const VECTOR*>(
+                           this)->operator[](i);
     }
 
     inline int size() const { 
-        return 
-          static_cast<const VECTOR*>(
-                  this
-          )->size(); 
+        return static_cast<const VECTOR*>(
+                           this)->size(); 
     }
 
     /* definition ommited here */
@@ -637,12 +625,11 @@ The `VectorBase` template has three parameters:
 As an example, the current implementation of `sapply`, supported by
 the template class `Rcpp::sugar::Sapply` is given below:
 
-```{Rcpp, eval = FALSE}
+```cpp
 template <int RTYPE, bool NA,
           typename T, typename Function>
 class Sapply : public VectorBase<
-    Rcpp::traits::r_sexptype_traits<
-        typename 
+    Rcpp::traits::r_sexptype_traits< typename 
         ::Rcpp::traits::result_of<Function>::type
     >::rtype,
     true,
@@ -653,8 +640,8 @@ public:
       ::Rcpp::traits::result_of<Function>::type;
     
     const static int RESULT_R_TYPE =
-      Rcpp::traits::r_sexptype_traits<
-          result_type>::rtype;
+        Rcpp::traits::r_sexptype_traits<
+            result_type>::rtype;
     
     typedef Rcpp::VectorBase<RTYPE,NA,T> VEC;
     
@@ -713,7 +700,7 @@ In order to decide which kind of expression is built, the `Sapply`
 template class queries the template argument via the `Rcpp::traits::result_of`
 template.
 
-```{Rcpp, eval = FALSE}
+```cpp
 typedef typename 
     ::Rcpp::traits::result_of<Function>::type 
     result_type;
@@ -745,7 +732,7 @@ function pointers.
 Based on the result type of the function, the `r_sexptype_traits`
 trait is used to identify the expression type.
 
-```{Rcpp, eval = FALSE}
+```cpp
 const static int RESULT_R_TYPE =
     Rcpp::traits::r_sexptype_traits<
         result_type>::rtype;
@@ -757,7 +744,7 @@ The `r_vector_element_converter` class is used to convert an
 object of the function's result type to the actual storage type suitable
 for the sugar expression.
 
-```{Rcpp, eval = FALSE}
+```cpp
 typedef typename
     Rcpp::traits::r_vector_element_converter<
         RESULT_R_TYPE>::type
@@ -770,7 +757,7 @@ The `storage_type` trait is used to get access to the storage type
 associated with a sugar expression type. For example, the storage type
 of a `REALSXP` expression is `double`.
 
-```{Rcpp, eval = FALSE}
+```cpp
 typedef typename
     Rcpp::traits::storage_type<RESULT_R_TYPE>::type 
     STORAGE;
@@ -781,7 +768,7 @@ typedef typename
 The input expression --- the expression over which `sapply` runs --- is
 also typedef'ed for convenience:
 
-```{Rcpp, eval = FALSE}
+```cpp
 typedef Rcpp::VectorBase<RTYPE, NA, T> VEC;
 ```
 
@@ -790,7 +777,7 @@ typedef Rcpp::VectorBase<RTYPE, NA, T> VEC;
 In order to be part of the \sugar system, the type generated by the
 `Sapply` class template must inherit from `VectorBase`.
 
-```{Rcpp, eval = FALSE}
+```cpp
 template <int RTYPE, bool NA,
           typename T, typename Function>
 class Sapply : public VectorBase<
@@ -813,7 +800,7 @@ The constructor of the `Sapply` class template is straightforward, it
 simply consists of holding the reference to the input expression and the
 function.
 
-```{Rcpp, eval = FALSE}
+```cpp
 Sapply(const VEC& vec_, Function fun_): 
     vec(vec_), fun(fun_){}
 
@@ -830,7 +817,7 @@ the same as the size of the input expression and the $i^{\text{th}}$
 element of the result is simply retrieved by applying the function
 and the converter. Both these methods are inline to maximize performance:
 
-```{Rcpp, eval = FALSE}
+```cpp
 inline STORAGE operator[](int i) const {
 	return converter_type::get(fun(vec[i]));
 }
