--- a/vignettes/Rcpp-extending.Rmd
+++ b/vignettes/Rcpp-extending.Rmd
@@ -37,8 +37,8 @@ abstract: |
 keywords:
   - Rcpp
   - extending
-  - r
-  - cpp
+  - R
+  - C++
 
 # Font size of the document, values of 9pt (default), 10pt, 11pt and 12pt
 fontsize: 9pt
@@ -76,7 +76,7 @@ header-includes:
 
 vignette: >
   %\VignetteIndexEntry{Rcpp-extending}
-  %\VignetteKeywords{Rcpp, extending, r, cpp}
+  %\VignetteKeywords{Rcpp, extending, R, Cpp}
   %\VignettePackage{Rcpp}
   %\VignetteEngine{knitr::rmarkdown}
 ---
