--- a/vignettes/Rcpp-quickref.Rmd
+++ b/vignettes/Rcpp-quickref.Rmd
@@ -32,8 +32,8 @@ abstract: |
 keywords:
   - Rcpp
   - quickref
-  - r
-  - cpp
+  - R
+  - C++
 
 # Font size of the document, values of 9pt (default), 10pt, 11pt and 12pt
 fontsize: 9pt
@@ -68,7 +68,7 @@ header-includes:
 
 vignette: >
   %\VignetteIndexEntry{Rcpp-quickref}
-  %\VignetteKeywords{Rcpp, quickref, r, cpp}
+  %\VignetteKeywords{Rcpp, quickref, R, Cpp}
   %\VignettePackage{Rcpp}
   %\VignetteEngine{knitr::rmarkdown}
 ---
